--- a/html/prueba.html
+++ b/html/prueba.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parráfos</title>
-</head>
-<body bgcolor="#933">
-<p><b>Bienvenido,</b></p> <br>
-<br>
-<br>
-<p align="left">estás en la página <b>Comida Para Todos Los Gustos</b></p>
-<p align ="center">Aquí aprenderas rectas fáciles y deliciosas</p>
-<p align="right"> A cocinar!!!</p>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Parráfos</title>
+	</head>
+	<body bgcolor="#933">
+		<p><b>Bienvenido,</b></p>
+		<br />
+		<br />
+		<br />
+		<p align="left">estás en la página <b>Comida Para Todos Los Gustos</b></p>
+		<p align="center">Aquí aprenderas rectas fáciles y deliciosas</p>
+		<p align="right">A cocinar!!!</p>
+	</body>
 </html>
