--- a/html/estilos.html
+++ b/html/estilos.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap" rel="stylesheet">">
-    <link rel="stylesheet" href="./css/estilos.css">
-    
-</head>
-<body>
-    <header class="headerconteiner">
-        <h1>Lorem ipsum dolor sit.</h1>
-    </header>
-    <main class="mainconteiner">
-    <section class="mainsection">
-            <p>
-                fuera del main
-            </p>
-        </section>
-    </main>
-    <footer class="footerconteiner">
-        <p>
-            i am your footer
-        </p>
-    </footer>
- </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,700;1,300;1,700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="../css/estilos.css" />
+	</head>
+	<body>
+		<header class="mainheader">
+			<h1>Lorem ipsum dolor sit amet.</h1>
+		</header>
+		<main class="mainconteiner">
+			<section class="mainsection left_side inlineblock w50">
+				<p>izquierda</p>
+			</section>
+			<section class="mainsection right_side inlineblock w50">
+				<p>derecha</p>
+			</section>
+		</main>
+		<footer class="mainfooter">i am your footer</footer>
+	</body>
 </html>
